Normalizando os dados

--- a/Prevendo_digitos_com_KNN/Classificacao_Multiclasse_KNN.ipynb
+++ b/Prevendo_digitos_com_KNN/Classificacao_Multiclasse_KNN.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,6 +75,13 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -250,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +294,7 @@
        "(1797, 64)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +315,7 @@
        "(1797,)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -427,6 +434,40 @@
     "\n",
     "Resultando em 1257 amostras para treino e 540 para teste respectivamente.<br>\n",
     "Na segunda divisão usamos os dados de treino, 70%, e mantivemos 90% para validação, e das 540 amostras de teste, 30% do dataset original, separamos em 10% para validarmos durante o treinamento."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Normalizando os dados</h2>\n",
+    "\n",
+    "Iremos normalizar os dados fazendo uso do pacote numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_norm = np.mean(X, axis=0)\n",
+    "x_norm.shape\n",
+    "\n",
+    "X_treino_norm = treinoData - x_norm\n",
+    "X_valid_norm = validData - x_norm\n",
+    "X_teste_norm = x_test - x_norm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Preparando o teste para verificar \n",
+    "k_vals = range(1,50, 2)\n",
+    "acuracia = []"
    ]
   },
   {
